--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,8 @@ jobs:
 
     - name: Build
       run: npm run build --if-present
+      env:
+        CI: false
       
     - name: Deploy
       uses: akhileshns/heroku-deploy@v3.4.6
