--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "firebase": "^9.6.8",
@@ -18,6 +18,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "17.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
