--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "secret_santa_app",
+  "jest": {
+    "coveragePathIgnorePatterns": ["reportWebVitals.js", "index.js", "App.js", "src/ui/AppRouter.jsx"],
+    "transformIgnorePatterns": [
+      "node_modules/?!(react-icons)"
+    ]
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +21,6 @@
     "jest": "^27.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
@@ -46,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@firebase/auth": "^0.19.9"
+    "@firebase/auth": "^0.19.9",
+    "react-firebase-hooks": "^5.0.3"
   }
 }
